--- a/src/libraries/System.Text.RegularExpressions/gen/Resources/xlf/Strings.es.xlf
+++ b/src/libraries/System.Text.RegularExpressions/gen/Resources/xlf/Strings.es.xlf
@@ -107,15 +107,15 @@
         <target state="translated">La expresión regular especificada no es válida. '{0}'</target>
         <note />
       </trans-unit>
-      <trans-unit id="InvalidRegexGeneratorAttributeMessage">
-        <source>The RegexGeneratorAttribute is malformed</source>
-        <target state="translated">RegexGeneratorAttribute tiene un formato incorrecto</target>
-        <note>{Locked="RegexGeneratorAttribute"}</note>
+      <trans-unit id="InvalidGeneratedRegexAttributeMessage">
+        <source>The GeneratedRegexAttribute is malformed</source>
+        <target state="needs-review-translation">GeneratedRegexAttribute tiene un formato incorrecto</target>
+        <note>{Locked="Regex"}</note>
       </trans-unit>
-      <trans-unit id="InvalidRegexGeneratorAttributeTitle">
-        <source>Invalid RegexGenerator usage</source>
-        <target state="translated">Uso de RegexGenerator no válido</target>
-        <note>{Locked="RegexGenerator"}</note>
+      <trans-unit id="InvalidGeneratedRegexAttributeTitle">
+        <source>Invalid GeneratedRegexAttribute usage</source>
+        <target state="needs-review-translation">Uso de GeneratedRegexAttribute no válido</target>
+        <note>{Locked="Regex"}</note>
       </trans-unit>
       <trans-unit id="InvalidUnicodePropertyEscape">
         <source>Incomplete \\p{X} character escape.</source>
@@ -128,13 +128,13 @@
         <note />
       </trans-unit>
       <trans-unit id="LimitedSourceGenerationMessage">
-        <source>The RegexGenerator couldn't generate a complete source implementation for the specified regular expression due to an internal limitation.</source>
-        <target state="translated">RegexGenerator no pudo generar una implementación de origen completa para la expresión regular especificada debido a una limitación interna.</target>
+        <source>The GeneratedRegexAttribute couldn't generate a complete source implementation for the specified regular expression due to an internal limitation.</source>
+        <target state="translated">GeneratedRegexAttribute no pudo generar una implementación de origen completa para la expresión regular especificada debido a una limitación interna.</target>
         <note />
       </trans-unit>
       <trans-unit id="LimitedSourceGenerationTitle">
-        <source>RegexGenerator limitation reached.</source>
-        <target state="translated">Se alcanzó la limitación de RegexGenerator.</target>
+        <source>GeneratedRegexAttribute limitation reached.</source>
+        <target state="translated">Se alcanzó la limitación de GeneratedRegexAttribute.</target>
         <note />
       </trans-unit>
       <trans-unit id="MakeException">
@@ -157,9 +157,9 @@
         <target state="translated">Falta el carácter de control.</target>
         <note />
       </trans-unit>
-      <trans-unit id="MultipleRegexGeneratorAttributesMessage">
-        <source>Multiple RegexGeneratorAttributes were applied to the same method, but only one is allowed</source>
-        <target state="translated">Se aplicaron varios RegexGeneratorAttributes al mismo método, pero solo se permite uno.</target>
+      <trans-unit id="MultipleGeneratedRegexAttributesMessage">
+        <source>Multiple GeneratedRegexAttributes were applied to the same method, but only one is allowed</source>
+        <target state="translated">Se aplicaron varios GeneratedRegexAttributes al mismo método, pero solo se permite uno.</target>
         <note />
       </trans-unit>
       <trans-unit id="NestedQuantifiersNotParenthesized">
@@ -203,8 +203,8 @@
         <note />
       </trans-unit>
       <trans-unit id="RegexMethodMustHaveValidSignatureMessage">
-        <source>RegexGenerator method must be partial, parameterless, non-generic, non-abstract, and return Regex</source>
-        <target state="translated">El método RegexGenerator debe ser parcial, sin parámetros, no genérico, no abstracto y devolver Regex</target>
+        <source>GeneratedRegexAttribute method must be partial, parameterless, non-generic, non-abstract, and return Regex</source>
+        <target state="translated">El método GeneratedRegexAttribute debe ser parcial, sin parámetros, no genérico, no abstracto y devolver Regex</target>
         <note />
       </trans-unit>
       <trans-unit id="ReversedCharacterRange">
@@ -263,13 +263,13 @@
         <note />
       </trans-unit>
       <trans-unit id="UseRegexSourceGeneratorMessage">
-        <source>Use 'RegexGeneratorAttribute' to generate the regular expression implementation at compile-time.</source>
-        <target state="translated">Use 'RegexGeneratorAttribute' para generar la implementación de expresiones regulares en tiempo de compilación.</target>
+        <source>Use 'GeneratedRegexAttribute' to generate the regular expression implementation at compile-time.</source>
+        <target state="translated">Use 'GeneratedRegexAttribute' para generar la implementación de expresiones regulares en tiempo de compilación.</target>
         <note />
       </trans-unit>
       <trans-unit id="UseRegexSourceGeneratorTitle">
-        <source>Convert to 'RegexGenerator'.</source>
-        <target state="translated">Convertir en 'RegexGenerator'.</target>
+        <source>Convert to 'GeneratedRegexAttribute'.</source>
+        <target state="translated">Convertir en 'GeneratedRegexAttribute'.</target>
         <note />
       </trans-unit>
     </body>
