--- a/src/libraries/System.Text.RegularExpressions/gen/Resources/xlf/Strings.fr.xlf
+++ b/src/libraries/System.Text.RegularExpressions/gen/Resources/xlf/Strings.fr.xlf
@@ -107,15 +107,15 @@
         <target state="translated">L’expression régulière spécifiée n’est pas valide. « {0} »</target>
         <note />
       </trans-unit>
-      <trans-unit id="InvalidRegexGeneratorAttributeMessage">
-        <source>The RegexGeneratorAttribute is malformed</source>
-        <target state="translated">RegexGeneratorAttribute est malformé</target>
-        <note>{Locked="RegexGeneratorAttribute"}</note>
+      <trans-unit id="InvalidGeneratedRegexAttributeMessage">
+        <source>The GeneratedRegexAttribute is malformed</source>
+        <target state="needs-review-translation">GeneratedRegexAttribute est malformé</target>
+        <note>{Locked="Regex"}</note>
       </trans-unit>
-      <trans-unit id="InvalidRegexGeneratorAttributeTitle">
-        <source>Invalid RegexGenerator usage</source>
-        <target state="translated">Utilisation de RegexGenerator non valide</target>
-        <note>{Locked="RegexGenerator"}</note>
+      <trans-unit id="InvalidGeneratedRegexAttributeTitle">
+        <source>Invalid GeneratedRegexAttribute usage</source>
+        <target state="needs-review-translation">Utilisation de GeneratedRegexAttribute non valide</target>
+        <note>{Locked="Regex"}</note>
       </trans-unit>
       <trans-unit id="InvalidUnicodePropertyEscape">
         <source>Incomplete \\p{X} character escape.</source>
@@ -128,13 +128,13 @@
         <note />
       </trans-unit>
       <trans-unit id="LimitedSourceGenerationMessage">
-        <source>The RegexGenerator couldn't generate a complete source implementation for the specified regular expression due to an internal limitation.</source>
-        <target state="translated">RegexGenerator n’a pas pu générer d’implémentation source complète pour l’expression régulière spécifiée en raison d’une limitation interne.</target>
+        <source>The GeneratedRegexAttribute couldn't generate a complete source implementation for the specified regular expression due to an internal limitation.</source>
+        <target state="translated">GeneratedRegexAttribute n’a pas pu générer d’implémentation source complète pour l’expression régulière spécifiée en raison d’une limitation interne.</target>
         <note />
       </trans-unit>
       <trans-unit id="LimitedSourceGenerationTitle">
-        <source>RegexGenerator limitation reached.</source>
-        <target state="translated">Limite RegexGenerator atteinte</target>
+        <source>GeneratedRegexAttribute limitation reached.</source>
+        <target state="translated">Limite GeneratedRegexAttribute atteinte</target>
         <note />
       </trans-unit>
       <trans-unit id="MakeException">
@@ -157,9 +157,9 @@
         <target state="translated">Caractère de contrôle manquant.</target>
         <note />
       </trans-unit>
-      <trans-unit id="MultipleRegexGeneratorAttributesMessage">
-        <source>Multiple RegexGeneratorAttributes were applied to the same method, but only one is allowed</source>
-        <target state="translated">Plusieurs RegexGeneratorAttributes ont été appliqués à la même méthode, alors qu’un seul est autorisé</target>
+      <trans-unit id="MultipleGeneratedRegexAttributesMessage">
+        <source>Multiple GeneratedRegexAttributes were applied to the same method, but only one is allowed</source>
+        <target state="translated">Plusieurs GeneratedRegexAttributes ont été appliqués à la même méthode, alors qu’un seul est autorisé</target>
         <note />
       </trans-unit>
       <trans-unit id="NestedQuantifiersNotParenthesized">
@@ -203,8 +203,8 @@
         <note />
       </trans-unit>
       <trans-unit id="RegexMethodMustHaveValidSignatureMessage">
-        <source>RegexGenerator method must be partial, parameterless, non-generic, non-abstract, and return Regex</source>
-        <target state="translated">La méthode RegexGenerator doit être partielle, sans paramètre, non générique, non abstraite et renvoyer Regex.</target>
+        <source>GeneratedRegexAttribute method must be partial, parameterless, non-generic, non-abstract, and return Regex</source>
+        <target state="translated">La méthode GeneratedRegexAttribute doit être partielle, sans paramètre, non générique, non abstraite et renvoyer Regex.</target>
         <note />
       </trans-unit>
       <trans-unit id="ReversedCharacterRange">
@@ -263,13 +263,13 @@
         <note />
       </trans-unit>
       <trans-unit id="UseRegexSourceGeneratorMessage">
-        <source>Use 'RegexGeneratorAttribute' to generate the regular expression implementation at compile-time.</source>
-        <target state="translated">Utilisez « RegexGeneratorAttribute » pour générer l’implémentation d’expression régulière au moment de la compilation.</target>
+        <source>Use 'GeneratedRegexAttribute' to generate the regular expression implementation at compile-time.</source>
+        <target state="translated">Utilisez « GeneratedRegexAttribute » pour générer l’implémentation d’expression régulière au moment de la compilation.</target>
         <note />
       </trans-unit>
       <trans-unit id="UseRegexSourceGeneratorTitle">
-        <source>Convert to 'RegexGenerator'.</source>
-        <target state="translated">Convertissez en 'RegexGenerator'.</target>
+        <source>Convert to 'GeneratedRegexAttribute'.</source>
+        <target state="translated">Convertissez en 'GeneratedRegexAttribute'.</target>
         <note />
       </trans-unit>
     </body>
